sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:12: error: not found: value x
    while (j>0 && x>v)
                  ^DutchFlagAlgo:12: error: not found: value v
    while (j>0 && x>v)
                    ^DutchFlagAlgo:14: error: not found: value x
      x = getCouleur(j-1);
      ^DutchFlagAlgo:15: error: not found: value x
      if (x > v)
          ^DutchFlagAlgo:15: error: not found: value v
      if (x > v)
              ^