sort.dutchflag.DutchFlagAlgo.scala.code
def solve()
{
  var n = getTaille()-1;
  var dernier = 0;
  var j = 0;  
  
  for (i <- 1 to n)
  {
    j = i;
    
    while (j>0 && x>v)
    {
      x = getCouleur(j-1);
      if (x > v)
      {
        echange(j, j-1);
      }
      j-=1;
    }
  }
}